--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "scripts": {
     "eslint": "./node_modules/.bin/eslint .; exit 0",
-    "start": "./node_modules/.bin/webpack-dev-server"
+    "start": "./node_modules/.bin/webpack-dev-server",
+    "build:client": "NODE_ENV=production ./node_modules/.bin/webpack -p --config webpack.client.rails.config.js"
   },
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": "5.3.0",
+    "npm": "3.3.12"
+  },
+  "author": "Hu Chen",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
@@ -17,6 +22,7 @@
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
     "eslint-plugin-react": "^3.12.0",
+    "expose-loader": "^0.7.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
